[Use Json instead of database for CRUD operations]